--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/android-chrome-512x512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
-  <title>Gambling.Tools</title>
+  <title>Gambler.Tools</title>
 </head>
 
 <body>
